[package]
name = "bloom"
version = "0.1.0"
authors = ["Octavian Oncescu <octavonce@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.2.7"
bloomfilter = "1.0.2"

[dev-dependencies]
quickcheck = "0.7.2"
bin-tools = { path = "../bin-tools" }