[package]
name = "purple_iblt"
version = "0.1.0"
authors = ["Octavian Oncescu <octavonce@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = { version = "1.2.0", features = ["nightly"] }
byteorder = "1.2.7"
bin-tools = { path = "../bin-tools" }
hashbrown = { git = "https://github.com/octavonce/hashbrown", features = ["serde", "rayon"] }

[dev-dependencies]
quickcheck = "0.7.2"