[package]
name = "test-helpers"
version = "0.1.0"
authors = ["Octavian Oncescu <octavonce@gmail.com>"]
publish = false

[dependencies]
hex = "0.3.2"
rlp = "0.3.0"
tempfile = "3.0.5"
kvdb-rocksdb = "0.1.0"
patricia-trie = "0.3.0"
account = { path = "../../account" }
persistence = { path = "../../persistence" }
crypto = { path = "../../crypto" }
quicksort = { path = "../quicksort" }